@@ -1,5 +1,5 @@
 % Generated by roxygen2 (4.1.0): do not edit by hand
-% Please edit documentation in R/ggtree.R
+% Please edit documentation in R/tree.R
 \name{\%<+\%}
 \alias{\%<+\%}
 \title{\%<+\%}
@@ -16,6 +16,16 @@ ggplot object with annotation data added
 }
 \description{
 add annotation data to a tree
+}
+\examples{
+nwk <- system.file("extdata", "sample.nwk", package="ggtree")
+tree <- read.tree(nwk)
+p <- ggtree(tree)
+dd <- data.frame(taxa=LETTERS[1:13],
+   		 place=c(rep("GZ", 5), rep("HK", 3), rep("CZ", 4), NA),
+             value=round(abs(rnorm(13, mean=70, sd=10)), digits=1))
+row.names(dd) <- NULL
+p \%<+\% dd + geom_text(aes(color=place, label=label), hjust=-0.5)
 }
 \author{
 Yu Guangchuang
