@@ -26,9 +26,11 @@ get.placements method
 get.placement method
 }
 \examples{
+\dontrun{
 jp <- system.file("extdata", "sample.jplace", package="ggtree")
 jp <- read.jplace(jp)
 get.placements(jp, by="all")
+}
 }
 \author{
 Guangchuang Yu \url{http://ygc.name}
