@@ -1,5 +1,5 @@
 % Generated by roxygen2 (4.1.0): do not edit by hand
-% Please edit documentation in R/ggtree.R
+% Please edit documentation in R/tree.R
 \name{\%<\%}
 \alias{\%<\%}
 \title{\%<\%}
@@ -16,6 +16,13 @@ updated ggplot object
 }
 \description{
 update tree
+}
+\examples{
+nwk <- system.file("extdata", "sample.nwk", package="ggtree")
+tree <- read.tree(nwk)
+p <- ggtree(tree) + geom_point(subset=.(!isTip),
+        	       color="#b5e521", alpha=1/4, size=10)
+p \%<\% rtree(30)
 }
 \author{
 Yu Guangchuang
